bindings/s5_flutter/lib/src/rust/frb_generated.io.dart


  late final _wire__crate__api__decrypt_chunk_xchacha20poly1305Ptr = _lookup<
          ffi.NativeFunction<
              WireSyncRust2DartDco Function(
                ffi.Pointer<wire_cst_list_prim_u_8_loose>,
                ffi.Uint64,
                ffi.Pointer<wire_cst_list_prim_u_8_loose>,
              )>>(
      'frbgen_s5_flutter_wire__crate__api__decrypt_chunk_xchacha20poly1305');
  late final _wire__crate__api__decrypt_chunk_xchacha20poly1305 =
      _wire__crate__api__decrypt_chunk_xchacha20poly1305Ptr.asFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            int,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )>();

  WireSyncRust2DartDco wire__crate__api__decrypt_xchacha20poly1305(
    ffi.Pointer<wire_cst_list_prim_u_8_loose> key,
    ffi.Pointer<wire_cst_list_prim_u_8_loose> data,
  ) {
    return _wire__crate__api__decrypt_xchacha20poly1305(key, data);
  }

  late final _wire__crate__api__decrypt_xchacha20poly1305Ptr = _lookup<
      ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )>>('frbgen_s5_flutter_wire__crate__api__decrypt_xchacha20poly1305');
  late final _wire__crate__api__decrypt_xchacha20poly1305 =
      _wire__crate__api__decrypt_xchacha20poly1305Ptr.asFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )>();

  WireSyncRust2DartDco wire__crate__api__derive_keys(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> phrase,
  ) {
    return _wire__crate__api__derive_keys(phrase);
  }

  late final _wire__crate__api__derive_keysPtr = _lookup<
      ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__derive_keys');
  late final _wire__crate__api__derive_keys =
      _wire__crate__api__derive_keysPtr.asFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>();

  WireSyncRust2DartDco wire__crate__api__encrypt_xchacha20poly1305(
    ffi.Pointer<wire_cst_list_prim_u_8_loose> key,
    ffi.Pointer<wire_cst_list_prim_u_8_loose> plaintext,
  ) {
    return _wire__crate__api__encrypt_xchacha20poly1305(key, plaintext);
  }

  late final _wire__crate__api__encrypt_xchacha20poly1305Ptr = _lookup<
      ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )>>('frbgen_s5_flutter_wire__crate__api__encrypt_xchacha20poly1305');
  late final _wire__crate__api__encrypt_xchacha20poly1305 =
      _wire__crate__api__encrypt_xchacha20poly1305Ptr.asFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )>();

  WireSyncRust2DartDco wire__crate__api__generate_seed_phrase() {
    return _wire__crate__api__generate_seed_phrase();
  }

  late final _wire__crate__api__generate_seed_phrasePtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function()>>(
    'frbgen_s5_flutter_wire__crate__api__generate_seed_phrase',
  );
  late final _wire__crate__api__generate_seed_phrase =
      _wire__crate__api__generate_seed_phrasePtr
          .asFunction<WireSyncRust2DartDco Function()>();

  WireSyncRust2DartDco wire__crate__api__hash_blake3(
    ffi.Pointer<wire_cst_list_prim_u_8_loose> data,
  ) {
    return _wire__crate__api__hash_blake3(data);
  }

  late final _wire__crate__api__hash_blake3Ptr = _lookup<
      ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )>>('frbgen_s5_flutter_wire__crate__api__hash_blake3');
  late final _wire__crate__api__hash_blake3 =
      _wire__crate__api__hash_blake3Ptr.asFunction<
          WireSyncRust2DartDco Function(
              ffi.Pointer<wire_cst_list_prim_u_8_loose>)>();

  WireSyncRust2DartDco wire__crate__api__validate_seed_phrase(
    ffi.Pointer<wire_cst_list_prim_u_8_strict> phrase,
  ) {
    return _wire__crate__api__validate_seed_phrase(phrase);
  }

  late final _wire__crate__api__validate_seed_phrasePtr = _lookup<
      ffi.NativeFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>>('frbgen_s5_flutter_wire__crate__api__validate_seed_phrase');
  late final _wire__crate__api__validate_seed_phrase =
      _wire__crate__api__validate_seed_phrasePtr.asFunction<
          WireSyncRust2DartDco Function(
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )>();

  void
      rust_arc_increment_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _rust_arc_increment_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client(
      ptr,
    );
  }

  late final _rust_arc_increment_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5ClientPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
    'frbgen_s5_flutter_rust_arc_increment_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client',
  );
  late final _rust_arc_increment_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client =
      _rust_arc_increment_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5ClientPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void
      rust_arc_decrement_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _rust_arc_decrement_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client(
      ptr,
    );
  }

  late final _rust_arc_decrement_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5ClientPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
    'frbgen_s5_flutter_rust_arc_decrement_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client',
  );
  late final _rust_arc_decrement_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5Client =
      _rust_arc_decrement_strong_count_RustOpaque_flutter_rust_bridgefor_generatedRustAutoOpaqueInnerS5ClientPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Uint32> cst_new_box_autoadd_u_32(int value) {
    return _cst_new_box_autoadd_u_32(value);
  }

  late final _cst_new_box_autoadd_u_32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>(
    'frbgen_s5_flutter_cst_new_box_autoadd_u_32',
  );
  late final _cst_new_box_autoadd_u_32 = _cst_new_box_autoadd_u_32Ptr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<wire_cst_list_String> cst_new_list_String(int len) {
    return _cst_new_list_String(len);
  }

  late final _cst_new_list_StringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_String> Function(
              ffi.Int32)>>('frbgen_s5_flutter_cst_new_list_String');
  late final _cst_new_list_String = _cst_new_list_StringPtr
      .asFunction<ffi.Pointer<wire_cst_list_String> Function(int)>();

  ffi.Pointer<wire_cst_list_file_entry> cst_new_list_file_entry(int len) {
    return _cst_new_list_file_entry(len);
  }

  late final _cst_new_list_file_entryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_file_entry> Function(
              ffi.Int32)>>('frbgen_s5_flutter_cst_new_list_file_entry');
  late final _cst_new_list_file_entry = _cst_new_list_file_entryPtr
      .asFunction<ffi.Pointer<wire_cst_list_file_entry> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_loose> cst_new_list_prim_u_8_loose(
    int len,
  ) {
    return _cst_new_list_prim_u_8_loose(len);
  }

  late final _cst_new_list_prim_u_8_loosePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_loose> Function(
              ffi.Int32)>>('frbgen_s5_flutter_cst_new_list_prim_u_8_loose');
  late final _cst_new_list_prim_u_8_loose = _cst_new_list_prim_u_8_loosePtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_loose> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_new_list_prim_u_8_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_8_strict(len);
  }

  late final _cst_new_list_prim_u_8_strictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(
              ffi.Int32)>>('frbgen_s5_flutter_cst_new_list_prim_u_8_strict');
  late final _cst_new_list_prim_u_8_strict = _cst_new_list_prim_u_8_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(int)>();

  int dummy_method_to_enforce_bundling() {
    return _dummy_method_to_enforce_bundling();
  }

  late final _dummy_method_to_enforce_bundlingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
    'dummy_method_to_enforce_bundling',
  );
  late final _dummy_method_to_enforce_bundling =
      _dummy_method_to_enforce_bundlingPtr.asFunction<int Function()>();
}

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_u_8_loose extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_String extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_u_8_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_file_entry extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> file_ref_json;

  @ffi.Uint64()
  external int size;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> media_type;

  external ffi.Pointer<ffi.Uint32> timestamp;
}

final class wire_cst_list_file_entry extends ffi.Struct {
  external ffi.Pointer<wire_cst_file_entry> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_directory_listing extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_file_entry> files;

  external ffi.Pointer<wire_cst_list_String> directories;
}

final class wire_cst_S5Error_InvalidInput extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;
}

final class wire_cst_S5Error_ConnectionError extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;
}

final class wire_cst_S5Error_StorageError extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;
}

final class wire_cst_S5Error_FileNotFound extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;
}

final class wire_cst_S5Error_CryptoError extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;
}

final class wire_cst_S5Error_InternalError extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> field0;
}

final class S5ErrorKind extends ffi.Union {
  external wire_cst_S5Error_InvalidInput InvalidInput;

  external wire_cst_S5Error_ConnectionError ConnectionError;

  external wire_cst_S5Error_StorageError StorageError;

  external wire_cst_S5Error_FileNotFound FileNotFound;

  external wire_cst_S5Error_CryptoError CryptoError;

  external wire_cst_S5Error_InternalError InternalError;
}

final class wire_cst_s_5_error extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external S5ErrorKind kind;
}

final class wire_cst_s_5_keys extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> root_secret_hex;
